--- a/client/src/features/members/member-list/member-list.html
+++ b/client/src/features/members/member-list/member-list.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col gap-3">
+<div class="grid grid-cols-5 gap-6">
     @for (member of members$ | async; track member.id) {
-        <app-member-card [member] = "member" />
+        <app-member-card [member] ="member" />
     }
 </div>
