--- a/client/src/features/members/member-profile/member-profile.html
+++ b/client/src/features/members/member-profile/member-profile.html
@@ -1,1 +1,15 @@
-<p>member-profile works!</p>
+@if (member(); as member) {
+    <div class="flex gap-3">
+        <span class="font-semibold">Member since: </span>
+        <span>{{member.created | date: 'longDate'}}</span>
+    </div>
+
+    <div class="flex gap-3">
+        <span class="font-semibold">Last active: </span>
+        <span>{{member.lastActive |date: 'dd MMM yyyy h:mm a'}}</span>
+    </div>
+
+    <h3 class="text-lg font-semibold text-primary">About {{member.displayName}}</h3>
+    <div>{{member.lastActive}}</div>
+
+}
