--- a/client/src/features/members/member-detailed/member-detailed.html
+++ b/client/src/features/members/member-detailed/member-detailed.html
@@ -8,7 +8,9 @@
     />
     <div class="card-body">
       <div class="flex flex-col items-center">
-        <div class="flex text-2xl text-primary">{{ member.displayName }}, {{member.dateOfBirth | age}}</div>
+        <div class="flex text-2xl text-primary">
+          {{ member.displayName }}, {{ member.dateOfBirth | age }}
+        </div>
         <div class="text-sm">{{ member.city }}, {{ member.country }}</div>
       </div>
       <div class="divider"></div>
@@ -24,14 +26,19 @@
     </div>
   </div>
   <div class="card bg-base-100 w-3/4 p-6">
-    <h3 class="card-title text-3xl text-primary">{{title()}}</h3>
+    <div class="flex justify-between items-center">
+      <h3 class="card-title text-3xl text-primary">{{ title() }}</h3>
+      @if (isCurrentUser()) {
+        <button (click)="memberService.editMode.set(!memberService.editMode())" class="btn btn-outline btn-primary">{{memberService.editMode() ? 'Cancel' : 'Edit'}}</button>
+      }
+    </div>
     <div class="divider"></div>
     <div>
-        <router-outlet />
+      <router-outlet />
     </div>
   </div>
 </div>
 
 } @else {
-    <div>Member not found</div>
+<div>Member not found</div>
 }
